# rust-game-of-life

./: .gitignore  Cargo.toml  README.md  index.html  style.css
src/: app.rs  engine.rs  main.rs  model.rs  state.rs
src/game/: cell.rs  mod.rs  position.rs
