[package]
name = "game-of-life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
log = "0.4.17"
regex = "1.7.0"
wasm-bindgen = "0.2.83"
wasm-logger = "0.2.0"
web-sys = "0.3.60"
yew = { version = "0.20.0", features = ["csr"] }
